force-app/main/default/objects/Opportunity_Guidance_Text__mdt/Opportunity_Guidance_Text__mdt.object-meta.xml
<CustomObject>
    <label>Opportunity Guidance Text</label>
    <pluralLabel>Opportunity Guidance Texts</pluralLabel>
</CustomObject>