force-app/main/default/objects/Opportunity_Guidance_Text__mdt/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if this is an error text or an message for product factbook</inlineHelpText>
    <label>Message</label>
    <type>Checkbox</type>
</CustomField>