force-app/main/default/objects/Opportunity_Guidance_Text__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>