force-app/main/default/objects/Opportunity_Guidance_Text__mdt/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>