force-app/main/default/objects/Opportunity_Guidance_Text__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsProtected</columns>
    <columns>Message__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
    <language>en_US</language>
</ListView>